2009-10-22  Mark Rowe  <mrowe@apple.com>

        Update to WordPress 2.8.5.

        * blog:

2009-10-19  Andrew Scherkus  <scherkus@chromium.org>

        Reviewed by Eric Seidel.

        Replace boolean operator indentation example with an if statement.

        https://bugs.webkit.org/show_bug.cgi?id=30538

        * coding/coding-style.html: Replace boolean indenting example to use "if"

2009-10-16  Darin Adler  <darin@apple.com>

        * coding/RefPtr.html: Minor revision, updating a link and tweaking
        wording a bit in few places.

2009-10-14  Evan Martin  <evan@chromium.org>

        Reviewed by Darin Adler.

        Document what state the build tree is expected to be in after a patch.

        * coding/contributing.html:

2009-10-11  Cameron McCormack  <cam@mcc.id.au>

        Reviewed by Eric Seidel.

        Change <a name> to id="" to fix styling problems
        https://bugs.webkit.org/show_bug.cgi?id=30283

        This prevents the headings from being styled like links.

        * coding/contributing.html:

2009-10-08  Alex Milowski  <alex@milowski.com>

        Reviewed by Darin Adler.

        Added a basic description of the layout and rendering project and added links to the blog entries on rendering.

        * projects/layout/index.html:

2009-10-07  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=30196
        Change style guidelines for indentation in header files

        * coding/coding-style.html: Don't indent in a namespace in a header file.

2009-10-07  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Mark Rowe.

        Add new Windows build prerequisite: Visual Studio 2005 Service Pack 1 ATL Security Update

        * building/tools.html:

2009-10-06  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Adam Barth.

        Diagram needs to be linked from the home page
        https://bugs.webkit.org/show_bug.cgi?id=30142
