@@ -1,3 +1,11 @@
+2009-10-26  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Adele Peterson.
+
+        Updated BSD License
+
+        * coding/bsd-license.html: Updated to the latest version.
+
 2009-10-22  Mark Rowe  <mrowe@apple.com>
 
         Update to WordPress 2.8.5.
